--- a/src/main/java/com/mycompany/tpintegrador/gui/ItemsMenuView.form
+++ b/src/main/java/com/mycompany/tpintegrador/gui/ItemsMenuView.form
@@ -73,6 +73,9 @@
             <Property name="text" type="java.lang.String" value="Vendedores"/>
             <Property name="toolTipText" type="java.lang.String" value=""/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton3ActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="jButton2">
           <Properties>
