--- a/src/main/java/com/mycompany/tpintegrador/gui/VendedorView.form
+++ b/src/main/java/com/mycompany/tpintegrador/gui/VendedorView.form
@@ -106,6 +106,9 @@
               <Dimension value="[94, 33]"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
